Some alignment issues fixed

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -350,8 +350,8 @@
     text-align: center;
   }
   .home .main .showcase-container .showcase-img {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: -99 !important;
     top: 0;
