--- a/src/assets/sass/Contact.scss
+++ b/src/assets/sass/Contact.scss
@@ -100,7 +100,7 @@
     .contact {
       flex-direction: column;
       align-content: center;
-      justify-content: space-between;
+      justify-content: center;
 
       .text-container {
         text-align: center;
