--- a/src/assets/sass/Login.scss
+++ b/src/assets/sass/Login.scss
@@ -2,7 +2,7 @@
 
 .login {
   width: min(90%, 1100px);
-  min-height: calc(100vh - 75px);
+  height: 100vh;
   margin-inline: auto;
   margin-bottom: 50px;
   display: flex;
@@ -165,6 +165,7 @@
   .login {
     flex-direction: column;
     text-align: center;
+    justify-content: center;
 
     .img-container {
       flex: 2;
@@ -181,15 +182,10 @@
     }
 
     .form-container {
-      margin-top: -1rem !important;
       flex: 8;
 
       .title {
         top: 20px;
-      }
-
-      form {
-        margin-top: 2rem !important;
       }
       .forgot {
         font-size: 14px;
